--- a/public/index.jade
+++ b/public/index.jade
@@ -33,7 +33,7 @@ html(lang="en", ng-app="app")
           ul.nav.navbar-nav.navbar-right(ng-show="!currentUser")
             li
               a(ui-sref="login") Login
-            a.btn.btn-info.btn-sm.navbar-btn.navbar-right(type="button", ui-sref="register") Sign up
+            //a.btn.btn-info.btn-sm.navbar-btn.navbar-right(type="button", ui-sref="register") Sign up
                       
     .container
       ui-view
