--- a/public/entries/entries.jade
+++ b/public/entries/entries.jade
@@ -1,1 +1,24 @@
-p hihisa
+h3 Search
+
+.row
+  .col-lg-4
+    form
+      .form-group
+        label Full name
+        input.form-control.input-lg(type="text", placeholder="Search", ng-model="fullName")
+      button.btn.btn-default(ng-click="search()", type="submit") Search
+  
+  .col-lg-8
+    div(ng-show="!noResults && entries.length")
+      p {{entries.length}} results for 
+        strong {{lastSearch}}
+      div(ng-repeat="entry in entries")
+        a(ng-href="#/entries/{{entry.index}}")
+          strong {{entry.fullName}}
+    
+    div(ng-show="noResults && !searching")
+      p Sorry but no results for 
+        strong {{lastSearch}}.
+    
+    div(ng-show="searching")
+      p Searching... please wait
