--- a/public/app.css
+++ b/public/app.css
@@ -15,6 +15,12 @@ body {
   line-height: 22px;
 }
 
+/* Margin */
+.margin-right {
+  margin-right: 5px;
+}
+
+
 .h1, h1, .h3, h3 {
 /*
   font-family: "freight-text-pro";
