--- a/public/app.css
+++ b/public/app.css
@@ -4,6 +4,10 @@ body {
   padding-bottom: 100px;
 }
 
+.text-mono {
+  font-family: 'Cousine', courier, monospace;
+}
+
 .text-serif {
   font-family: "freight-text-pro", "Georgia", serif;
   font-size: 16px;
