--- a/public/index.jade
+++ b/public/index.jade
@@ -6,7 +6,7 @@ html(lang="en", ng-app="app")
     base(href="/")
     title Grand Tour Explorer
       
-    link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600,600italic,700,700italic|Hammersmith+One")  
+    link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Cousine:400,700")  
     link(rel="stylesheet", href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
     link(rel="stylesheet", href="bower_components/bootstrap/dist/css/bootstrap.min.css")
     link(rel='stylesheet', href='/app.css')
