--- a/public/app.css
+++ b/public/app.css
@@ -10,18 +10,21 @@ body {
 
 .text-serif {
   font-family: "freight-text-pro", "Georgia", serif;
-  font-size: 16px;
-  line-height: 26px;
+  font-size: 18px;
+  line-height: 1.7;
 }
 
 .text-serif.small {
-  font-size: 13px;
-  line-height: 22px;
+  font-size: 14px;
 }
 
 /* Margin */
 .margin-right {
   margin-right: 5px;
+}
+
+.margin-left {
+  margin-left: 5px;
 }
 
 
@@ -33,9 +36,16 @@ body {
   margin-bottom: 50px;
 }
 
+.h1, h1 {
+  font-family: "freight-text-pro", "Georgia", serif;
+  font-weight: 200;
+}
+
 .h4, h4 {
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 600;
+  margin-top: 0px;
+  padding: 3px 0px;
 }
 
 .navbar-default .navbar-brand {
@@ -45,6 +55,14 @@ body {
 sup {
   cursor: pointer;
   color: #666;
+}
+
+.tnum-lnum {
+  font-feature-settings: 'tnum', 'lnum';
+  -moz-font-feature-settings: 'tnum', 'lnum';
+  -webkit-font-feature-settings: 'tnum', 'lnum';
+  -ms-font-feature-settings: 'tnum', 'lnum';
+  -moz-font-feature-settings: 'tnum=1,lnum=1';
 }
 
 
@@ -58,6 +76,52 @@ sup {
 .panel-default>.panel-heading {
   font-family: "europa", "Helvetica", "Arial", sans-serif;
   font-weight: 600;
+}
+
+.entry-info .panel {
+  border: none;
+  border-radius: 0px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+/*  margin-bottom: 30px;*/
+}
+
+.entry-info .panel-heading {
+  background-color: #fff;
+  padding: 3px 0px;
+  border-bottom: 1px solid #ddd;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  font-size: 13px;
+}
+
+.entry-info .list-group-item {
+  border: 1px solid #eee;
+}
+
+.entry-info .panel>.list-group .list-group-item, .panel>.panel-collapse>.list-group .list-group-item {
+  border-radius: 0;
+  padding: 3px 0px;
+  font-size: 15px;
+}
+
+.entry-info .panel>.list-group:last-child .list-group-item:last-child, .panel>.panel-collapse>.list-group:last-child .list-group-item:last-child {
+  border-bottom: 1px solid #eee;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+
+/* Table */
+
+.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+  padding: 3px 0px;
+  line-height: 1.42857143;
+  vertical-align: top;
+  border-top: 1px solid #eee;
+}
+
+.table>tbody>tr>td.bordered {
+  padding-left: 10px;
 }
 
 /* Tooltip */
