--- a/public/entry/entry.jade
+++ b/public/entry/entry.jade
@@ -4,35 +4,99 @@
 .div(ng-show="entry")
   
   h1 {{entry.fullName}}
+    a.pull-right(ng-href="#/entries/{{id+1}}")
+      i.fa.fa-angle-right.margin-left
+    a.pull-right(ng-href="#/entries/{{id-1}}")
+      i.fa.fa-angle-left 
 
   .row
-    div.col-lg-3
-      
+    div.col-lg-3.entry-info
+            
       .row
-        .col-lg-12.col-md-4.col-sm-6
+        .col-lg-12.col-md-4.col-sm-6(ng-show="entry.birthDate.start || entry.birthPlace")
           .panel.panel-default
             .panel-heading Born
             ul.list-group
               li.list-group-item {{entry.birthDate.start}}<span ng-show="entry.birthDate.start!=entry.birthDate.end">/{{entry.birthDate.end}}</span><span ng-show="entry.birthPlace">, {{entry.birthPlace}}</span>
         
-        .col-lg-12.col-md-4.col-sm-6
+        .col-lg-12.col-md-4.col-sm-6(ng-show="entry.deathDate.start || entry.deathPlace")
           .panel.panel-default
             .panel-heading Died
             ul.list-group
               li.list-group-item {{entry.deathDate.start}}<span ng-show="entry.deathDate.start!=entry.deathDate.end">/{{entry.deathDate.end}}</span><span ng-show="entry.deathPlace">, {{entry.deathPlace}}</span>
         
-        .col-lg-12.col-md-4.col-sm-6  
+        .col-lg-12.col-md-4.col-sm-6(ng-show="entry.flourishedStart.start || entry.flourishedStart.end")
+          .panel.panel-default
+            .panel-heading Flourished
+            ul.list-group
+              li.list-group-item {{entry.flourishedStartDate.start}}
+                span(ng-show="entry.flourishedStartDate.start!=entry.flourishedStartDate.end")
+                span /{{entry.flourishedStartDate.end}}
+
+
+        .col-lg-12.col-md-4.col-sm-6(ng-show="entry.parents.parents")
+          .panel.panel-default
+            .panel-heading Parents
+            ul.list-group
+              li.list-group-item {{entry.parents.parents}}
+        
+        
+        .col-lg-12.col-md-4.col-sm-6(ng-show="entry.marriages.length")
+          .panel.panel-default
+            .panel-heading Marriages
+            ul.list-group
+              li.list-group-item(ng-repeat="e in entry.marriages | orderBy : 'sequence'")
+                span {{e.spouse}} <span ng-show="e.year">({{e.year}})</span>
+        
+        .col-lg-12.col-md-4.col-sm-6(ng-show="entry.education.length") 
           .panel.panel-default
             .panel-heading Education
             ul.list-group
-              li.list-group-item(ng-repeat="e in entry.education") {{e.degree}}, {{e.place}} {{e.studiedUnder}} <span ng-show="e.from">({{e.from}}-{{e.to}})</span>
-      
+              li.list-group-item(ng-repeat="e in entry.education")
+                span(ng-show="e.degree") {{e.degree}}
+                span(ng-show="e.degree && e.institution") , 
+                span(ng-show="e.institution") {{e.institution}}
+                span(ng-show="e.place") , {{e.place}} 
+                span(ng-show="e.teacher") under {{e.teacher}} 
+                span(ng-show="e.from") ({{e.from}}
+                span(ng-show="e.to") -{{e.to}}
+                span(ng-show="e.from || e.to") )
+                span  {{e.degreeDate}}
       
     div.col-lg-6
       h4 Entry
-      p.text-serif.check-html(ng-bind-html="superscript(entry.biography)")
-      p.text-serif.check-html(ng-bind-html="superscript(entry.tours)")
-      p.text-serif.check-html(ng-bind-html="superscript(entry.narrative)")
+      p.text-serif.check-html(ng-bind-html="superscript(entry.biography, entry.notes)")
+      p.text-serif.check-html(ng-repeat="tour in entry.tours")
+        span.check-html(ng-bind-html="superscript(tour.text, tour.notes)")
+        span.small
+          br
+          | {{tour.notes}}
+      p.text-serif.check-html(ng-bind-html="superscript(entry.narrative, entry.notes)")
       p.text-serif.small {{entry.notes}}
+      
 
-    div.col-lg-3
+
+    div.col-lg-3.entry-info
+      .row
+        .col-lg-12(ng-show="tours.length")
+          
+          .panel.panel-default(ng-repeat="tour in tours")
+            .panel-heading {{tour.key}} {{tour.start}}/{{tour.end}}
+            table.table.table-hover
+              thead
+                tr
+                  th Place
+                  //th.text-right after
+                  th.text-right from
+                  th.text-right to
+                  //th.text-right before
+              tbody
+                tr(ng-repeat="travel in tour.values")
+
+                  td(ng-class="{'bordered':travel.parent}") {{travel.place}}
+                  //td.text-right.tnum-lnum {{travel.gte}}
+                  td.text-right.tnum-lnum {{travel.travelStartYear}}/{{travel.travelStartMonth}}/{{travel.travelStartDay}}
+                  td.text-right.tnum-lnum {{travel.travelEndYear}}/{{travel.travelEndMonth}}/{{travel.travelEndDay}}
+                  //td.text-right.tnum-lnum {{travel.lte}}
+            
+  
