--- a/public/index.jade
+++ b/public/index.jade
@@ -48,6 +48,9 @@ html(lang="en", ng-app="app")
       
     script(src="bower_components/jquery/dist/jquery.min.js")
     script(src="bower_components/bootstrap/dist/js/bootstrap.min.js")
+    script(src="bower_components/d3/d3.min.js")
+    script(src="bower_components/smartquotesjs/src/smartquotes.min.js")
+
     script(src="bower_components/angular/angular.min.js")
     script(src="bower_components/angular-sanitize/angular-sanitize.min.js")
     script(src="bower_components/angular-ui-router/release/angular-ui-router.min.js")
