--- a/public/main/main.jade
+++ b/public/main/main.jade
@@ -1,1 +1,21 @@
-h1 Welcome to the Grand Tour
+.header-wrapper
+  .header
+    .container
+      h1 Grand Tour Explorer 
+        sup.small beta
+        .small Explore the journeys and the lives of British and Irish travelers to eighteenth-century Italy
+
+.container.main-view
+
+  .row
+    .col-lg-10
+      p.text-serif A digital project created by Giovanna Ceserani and Giorgio Caviglia at CESTA Stanford University
+      p ...
+      
+      p
+        button.btn.btn-lg.btn-success(ui-sref="explore") Start exploring
+      
+      p.text-serif The tool is still under construction; private beta version currently being tested with the support of John Brewer, Melissa Calaresu, Jeffrey Collins, Paul Davis, Tamara Griggs, Christopher Johns, Jane Kamensky, Simon Macdonald, Rebecca Messbarger, Barbara Naddeo, Carole Paul, Molly Taylor-Poleskey, Sophus Reinert, Rosemary Sweet <rhs4@leicester.ac.uk>
+
+      p.text-serif For information about the project, please contact Molly Taylor-Poleskey  
+        a molly@molly.molly
