--- a/public/admin/admin.jade
+++ b/public/admin/admin.jade
@@ -1,31 +1,128 @@
-.row
-  .col-lg-2
-    
-    ul.nav.nav-pills.nav-stacked
-      li(role="presentation")
-        a Data
-      li(role="presentation")
-        a Reload        
-  
-  
-  .col-lg-10
-      
-    form
-      .form-group
-        label Google Spreadsheet Id
-        input.input-lg.form-control.text-mono(ng-model="defaults.spreadsheetId", required)
-      
-      h2 Sheets
-      
-      .form-group
-        label Entries
-        input.form-control(ng-model="defaults.entries", placeholder="{{defaults.entries}}")
+.container.main-view
 
+  ul.nav.nav-tabs
+    li(role="presentation", ng-class="{active:view=='data'}")
+      a(ng-click="view='data'") Data
+    li(role="presentation", ng-class="{active:view=='users'}")
+      a(ng-click="view='users'") Users    
+    li(role="presentation", ng-class="{active:view=='addUser'}")
+      a(ng-click="view='addUser'") Add user
 
-    a.btn.btn-danger(ng-click="reload()") Reload all
+  .row
 
-    .row
-      .col-lg-12
-        progressbar.progress-striped.active(value="progress", max="total", type="{{type}}", ng-show="loading || finished")
-          span(ng-show="loading") {{progress}} / {{total}}
-          span(ng-show="finished") Done!
+    .col-lg-12(ng-show="view=='addUser'")
+
+      h3 Add user
+      
+      .alert.alert-warning(ng-show="message") {{message}}
+      
+      
+      form.form-horizontal(ng-submit="register()")
+        .form-group
+          label.col-sm-3.control-label User name*
+          .col-sm-9
+            input.form-control(type="text", name="username", ng-model="user.username", placeholder="User name", required)
+        .form-group
+          label.col-sm-3.control-label Full name
+          .col-sm-9
+            input.form-control(type="text", name="fullname", ng-model="user.fullName", placeholder="Full name")
+        .form-group
+          label.col-sm-3.control-label Password*
+          .col-sm-9
+            input.form-control(type="password", name="password", ng-model="user.password", placeholder="Password", required)
+        .form-group
+          label.col-sm-3.control-label Confirm password*
+          .col-sm-9
+            input.form-control(type="password", ng-model="confirmPassword", placeholder="Confirm password", required)
+        .form-group(ng-show="user.password.length && confirmPassword.length && user.password != confirmPassword")
+          .col-sm-offset-3.col-sm-9
+            span.text-danger Passwords do not match, please try again.
+        .form-group
+          label.col-sm-3.control-label Email
+          .col-sm-9
+            input.form-control(type="email", name="email", ng-model="user.email", placeholder="Email address")
+        .form-group
+          .col-sm-3
+          .col-sm-9
+            .checkbox
+              label
+                input(type="checkbox", name="role", ng-model="user.role") 
+                | Set as administrator
+              
+        .form-group
+          .col-sm-offset-3.col-sm-9
+            button.btn.btn-info.btn-block(type="submit", ng-disabled="!user.password.length || !confirmPassword.length || user.password != confirmPassword") Sign up
+      
+      
+    .col-lg-12(ng-show="view=='users'")
+      
+      h3 Users
+      
+      .alert.alert-warning(ng-show="message") {{message}}
+          
+      form
+            
+        table.table.reload-table
+          thead
+            tr
+              th Username
+              th Full name
+              th Email
+              th Role
+              th
+          tbody
+            tr(ng-repeat="user in users")
+              td {{user.username}}
+              td
+                input.form-control(ng-model="user.fullName", placeholder="{{user.fullName}}")
+              td
+                input.form-control(ng-model="user.email", placeholder="{{user.email}}")  
+              td {{user.role}}
+              td
+                button.btn.btn-sm.btn-danger(ng-disabled="currentUser.username==user.username" ng-click="remove(user.username)") Delete
+                span &nbsp;
+                button.btn.btn-sm.btn-info(ng-click="update(user)") Update
+                
+    .col-lg-12(ng-show="view=='data'")
+      
+      h3 Data
+      
+      p You can reload the data from here.
+        
+      form
+            
+        table.table.reload-table
+          thead
+            tr
+              th
+                input(type="checkbox", ng-model="allReload", ng-change="setReload(allReload)")
+              th Data dimension
+              th Sheet name
+              th Spreadsheet Id
+          tbody
+            tr(ng-repeat="sheet in defaults.sheets")
+              td
+                input(type="checkbox", ng-model="sheet.reload")
+              td {{sheet.label}}
+              td(ng-show="sheet.info && !sheet.error")
+                input.form-control.text-mono(ng-model="sheet.sheetName", placeholder="{{sheet.sheetName}}" ng-disabled="!sheet.reload")
+              td(ng-show="sheet.info && !sheet.error")
+                input.form-control.text-mono(ng-model="sheet.spreadsheetId", placeholder="{{sheet.spreadsheetId}}" ng-disabled="!sheet.reload")
+              td(colspan="2", ng-show="sheet.error")
+                .alert.alert-danger {{sheet.error}}
+              td(colspan="2", ng-show="sheet.started && !sheet.error")
+                progressbar.progress-striped.active(value="sheet.total", max="sheet.total", type="warning")
+                  span Loading {{sheet.rows}} rows and {{sheet.columns}} columns
+              td(colspan="2", ng-show="sheet.loading")
+                progressbar.progress-striped.active(value="sheet.count", max="sheet.total", type="info")
+                  span {{sheet.count}}
+              td(colspan="2", ng-show="sheet.finished")
+                progressbar(value="sheet.total", max="sheet.total", type="success")
+                  span {{sheet.rows}} successfully loaded
+        
+
+      a#reload.btn.btn-danger(ng-click="reload()", data-loading-text="Loading...") Reload selected
+
+      .row
+        .col-lg-12
+          
