--- a/public/app.css
+++ b/public/app.css
@@ -1,11 +1,39 @@
 body {
-/*  padding-top: 70px;*/
-  font-family: "europa", "Helvetica", "Arial", sans-serif;
+  font: 13px "Helvetica Neue",Helvetica,Arial,sans-serif;
   padding-bottom: 100px;
+}
+
+.header-wrapper {
+  background-image: url('background.jpg');
+  background-size: cover;
+  background-position: 50% 20%;
+}
+
+.header {
+  background-color: rgba(0,0,0,.7);
+  padding: 120px 0px;
+  color: #eee;
+}
+
+.header h1 {
+  letter-spacing: 1px;
+  font-size: 48px;
+}
+
+.header h1 .small {
+  letter-spacing: normal;
+  font-weight: 100;
+  color: #999;
+  line-height: 1.3;
+}
+
+.main-view {
+  margin-top: 20px;
 }
 
 .text-mono {
   font-family: 'Cousine', courier, monospace;
+  font-size: 12px;
 }
 
 .text-serif {
@@ -18,6 +46,9 @@ body {
   font-size: 14px;
 }
 
+label {
+}
+
 /* Margin */
 .margin-right {
   margin-right: 5px;
@@ -25,6 +56,15 @@ body {
 
 .margin-left {
   margin-left: 5px;
+}
+
+/* Border */
+.border-right {
+  border-right: 1px solid #eee;
+}
+
+.border-left {
+  border-left: 1px solid #eee;
 }
 
 
@@ -41,15 +81,83 @@ body {
   font-weight: 200;
 }
 
-.h4, h4 {
+/*.h4, h4 {
   font-size: 13px;
   font-weight: 600;
   margin-top: 0px;
   padding: 3px 0px;
+}*/
+
+a {
+  cursor: pointer;
+}
+
+a:focus,
+:focus,
+*:focus {
+  outline: none;
+  text-decoration: none;
+}
+
+.query {
+  font-size: 12px;
+  color: #888;
+  border: none;
+  border-radius: 2px;
+}
+
+.form-control {
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.form-control:focus {
+    border-color: #444;
+    outline: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.form-control[disabled],
+.form-control[readonly],
+fieldset[disabled] .form-control {
+    opacity: .5;
+}
+
+.progress {
+  height: 34px;
+  border-radius: 2px;
+  margin-bottom: 0px;
+}
+
+.progress-bar {
+  line-height: 34px;
+}
+
+input[type=checkbox], input[type=radio] {
+    margin: 2px 0 0;
+}
+
+.btn {
+  border-radius: 2px;
 }
 
 .navbar-default .navbar-brand {
   font-family: "freight-text-pro", "Georgia", serif;
+  color: #222;
+}
+
+.navbar-default {
+  border-bottom: none;
+  padding: 10px 0px;
+  margin-bottom: 0px;
+}
+
+.navbar-default .navbar-nav>li>a {
+    color: #777;
+    font-weight: 500;
 }
 
 sup {
@@ -73,8 +181,19 @@ sup {
   font-family: "freight-text-pro";
 }
 
+.panel a {
+  color: #227AB9;
+}
+
+.panel a:hover {
+  color: #222;
+  text-decoration: none;
+  background-color: #FDFFCA;
+  border-radius: 2px;
+}
+
 .panel-default>.panel-heading {
-  font-family: "europa", "Helvetica", "Arial", sans-serif;
+/*  font-family: "europa", "Helvetica", "Arial", sans-serif;*/
   font-weight: 600;
 }
 
@@ -92,7 +211,7 @@ sup {
   border-bottom: 1px solid #ddd;
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
-  font-size: 13px;
+  font-size: 14px;
 }
 
 .entry-info .list-group-item {
@@ -111,10 +230,48 @@ sup {
   border-bottom-left-radius: 0px;
 }
 
+.panel.panel-nested {
+  margin-bottom: 0px;
+  margin-top: 10px;
+}
+
+.panel.panel-nested .panel-heading {
+  padding-top: 0px;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.entry-info .panel-nested>.list-group .list-group-item,
+.entry-info .panel-nested>.panel-collapse>.list-group .list-group-item {
+    border-radius: 0;
+    font-size: 14px;
+}
+
+.entry-info .panel-nested>.list-group:last-child .list-group-item:last-child,
+.entry-info .panel-nested>.panel-collapse>.list-group:last-child .list-group-item:last-child {
+    border-bottom: none;
+}
+
+/* List group */
+
+.list-group-item-text {
+  line-height: 1.6;
+}
+
+.list-group-item:first-child {
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
+
+.list-group-item:last-child {
+    border-bottom-right-radius: 2px;
+    border-bottom-left-radius: 2px;
+}
+
 /* Table */
 
 .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
-  padding: 3px 0px;
+  padding: 3px;
   line-height: 1.42857143;
   vertical-align: top;
   border-top: 1px solid #eee;
@@ -122,6 +279,34 @@ sup {
 
 .table>tbody>tr>td.bordered {
   padding-left: 10px;
+}
+
+.table>thead>tr>th {
+  border-bottom: 1px solid #ddd;
+}
+
+.reload-table>tbody>tr>td,
+.reload-table>tbody>tr>th,
+.reload-table>tfoot>tr>td,
+.reload-table>tfoot>tr>th,
+.reload-table>thead>tr>td,
+.reload-table>thead>tr>th {
+  padding: 8px;
+  border-top: none;
+}
+
+
+.reload-table>thead>tr>th {
+  border-bottom: none;
+  padding-bottom: 20px;
+}
+
+/* Alert */
+
+.alert {
+  padding: 6px 12px;
+  margin-bottom: 0px;
+  border-radius: 2px;
 }
 
 /* Tooltip */
@@ -151,4 +336,8 @@ sup {
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
+}
+
+.checkbox, .radio {
+  margin-top: 5px;
 }
